assets/css/style.css
/* ... */
.home-page .compact-issue .entry-header .entry-title {
  font-size: 32px;
  line-height: 32px;
}

.entry-header .entry-title:first-child,
.entry-header .issue-number + .entry-title {
  margin-top: 75px;
}

.home-page .entry-header .entry-title:first-child,
.issue-page .entry-header .entry-title:first-child {
  margin-top: 0;
  padding: 0;
}

.home-page .entry-header .entry-title a,
.issue-page .entry-header .entry-title a {
  color: #222;
}

.entry-header p,
.entry-header h2 {
  padding: 0;
  /* font-family: $serif;
	font-style: normal;
	font-weight: normal; */
}

.entry-header .entry-details,
.author-header .entry-details,
.blog-header .entry-details {
  font-weight: normal;
  margin-bottom: 12px;
  font-size: 18px;
  line-height: 30px;
}

.entry-list li p.entry-details {
  font-weight: normal;
  margin-bottom: 6px;
  font-size: 16px;
  line-height: 26px;
  font-family: "Franklin ITC Light", sans-serif;
}

.compact-issue .entry-header .entry-details {
  padding: 0;
  font-size: 14px;
  line-height: 22px;
}

.entry-header .entry-details a {
  white-space: nowrap;
}

.home-page .entry-header .entry-summary,
.issue-page .entry-header .entry-summary {
  padding: 0;
  font-size: 24px;
  line-height: 36px;
  font-style: normal;
  text-align: left;
  font-family: georgia, serif;
}

.home-page .compact-issue .entry-header .entry-summary {
  font-size: 16px;
  line-height: 24px;
}

.entry-header .name {
  font-family: "Franklin ITC", sans-serif;
  font-style: normal;
  text-transform: uppercase;
}

.optional-break {
  display: block;
}

.entry-header time {
  white-space: nowrap;
}

.entry-header time:before,
footer a.author + time:before,
footer a.aside-author + time:before {
  content: " · ";
}

.entry-meta {
  font-size: 14px;
}

.comment-count {
  white-space: nowrap;
}

.comment-count.no-comments {
  /*background: $ccc;*/
}

.home-page .comment-count,
.issue-page .comment-count {
  /*font-size: 12px;*/
}

.comment-count:before {
  /* content: " · ";*/
}

.comment-count:after {
  /*content: "";
	position: absolute;
	top: 50%;
	right: 100%;
	margin-top: -6px;
	border: solid transparent;
	border-width: 6px;
	border-right-color: $text;
	pointer-events: none;*/
}

.comment-count.no-comments:after {
  /*border-right-color: $ccc;*/
}

.author-header,
.blog-header {
  position: relative;
  /*min-height: 120px;*/
  margin: 36px 0;
}

.author-header {
  padding-left: 0;
  text-align: center;
}

.author-header.no-photo {
  min-height: 0;
  padding-left: 0;
}

.blog-header {
  padding-left: 0;
}

.article-layout .author-header,
.article-layout .blog-header,
.article-layout .entry-header {
  width: 960px;
  max-width: 100%;
  margin-top: 72px;
  margin-bottom: 36px;
  margin-left: auto;
  margin-right: auto;
}

.article-layout .author-header {
  padding-left: 0;
}

.sponsored .article-layout .blog-header {
  padding-right: 132px;
}

.url-display {
  margin-bottom: 12px;
  font-family: "Menlo", monospace;
  font-size: 14px;
}

.author-header img {
  display: block;
  margin: 0 auto 18px;
  border-radius: 50%;
  border: 0.5em solid #f5f5f5;
}

.columnist-photo img {
  border-radius: 50%;
  border: 0.5em solid #f5f5f5;
}

.previous-column,
.previous-participant-article {
  margin-bottom: 2em;
}

.previous-participant-article {
  text-align: center;
}

.item-summary.article.columnist .previous-column,
.item-summary.article.columnist .previous-participant-article {
  margin-top: 1em;
}

.previous-column time,
.previous-column i,
.previous-participant-article time {
  color: #666;
  font-style: italic;
}

.item-summary.article.columnist .previous-column time,
.item-summary.article.columnist .previous-column i,
.item-summary.article.columnist .previous-participant-article time {
  font-size: 14px;
}

.previous-column h2,
.previous-participant-article h2 {
  margin-top: 6px;
  font-family: "Franklin ITC", sans-serif;
  font-weight: bold;
  font-size: 24px;
}

.item-summary.article.columnist .previous-column h2,
.item-summary.article.columnist .previous-participant-article h2 {
  margin-top: 0;
  font-size: 18px;
}

.author-header + .column-intro,
.blog-header + .column-intro {
  font-size: 24px;
  line-height: 36px;
}

.author-header + .column-intro a,
.blog-header + .column-intro a {
  font-style: italic;
}

.author-header + .column-intro a:after,
.blog-header + .column-intro a:after,
.item-summary.link-post > h1 a:after,
.board-link a:after {
  content: "›";
  padding-left: 6px;
}

.column-name {
  display: block;
  /* margin-bottom: 4px; */
  font-family: "Franklin ITC", sans-serif;
  font-size: 14px;
  line-height: 30px;
  text-transform: uppercase;
  font-weight: bold;
  font-style: normal;
}

.column-name.latest:before {
  content: "The Latest:";
  padding-right: 6px;
}

.column-name.featured:before {
  content: "Featured:";
  padding-right: 6px;
}

.column-name i {
  font-family: georgia, serif;
  text-transform: none;
}

.author-header h1,
.blog-header h1 {
  margin-bottom: 0;
  font-size: 36px;
  line-height: 42px;
  font-family: "Franklin ITC", sans-serif;
  font-weight: bold;
  font-style: normal;
}

.blog-header h1 a {
  color: #222;
}

.author-header p.meta,
.blog-header p.meta {
  font-size: 14px;
  font-style: italic;
}

ul.fancy-links li {
  display: inline-block;
  margin-bottom: 2px;
  font-size: 12px;
  font-family: "Franklin ITC Light", sans-serif;
}

ul.fancy-links li a {
  display: block;
  padding: 0 6px 0 26px;
  color: #222;
  border: 1px solid #ccc;
  background: url(/components/assets/img/bookmark.png) 7px center no-repeat;
  border-radius: 5px;
}

ul.fancy-links li a.twitter {
  padding-left: 32px;
  background: url(/components/assets/img/icon_twitter.png) 5px center no-repeat;
}

ul.fancy-links li a.github {
  padding-left: 32px;
  background: url(/components/assets/img/icon_github.png) 5px center no-repeat;
}

ul.fancy-links li a.dribbble {
  padding-left: 32px;
  background: url(/components/assets/img/icon_dribbble.png) 5px center no-repeat;
}
/* ... */

